Updated 'index.html' via CloudCannon

--- a/index.html
+++ b/index.html
@@ -1,9 +1,7 @@
 ---
 ---
 
-
-
-<section class="categories">
+<section class="categories 222">
 	{% assign categories = site.categories | sort %}
 	{% for category in categories %}
 		{% assign name = category[0] %}
