Updated 'index.html' via CloudCannon

--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 ---
 ---
 
-<section class="categories 222">
+
+
+<section class="categories aaaaa">
 	{% assign categories = site.categories | sort %}
 	{% for category in categories %}
 		{% assign name = category[0] %}
