Updated 'index.html' via CloudCannon

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 
 
-<section class="categories aaaaa">
+<section class="categories">
 	{% assign categories = site.categories | sort %}
 	{% for category in categories %}
 		{% assign name = category[0] %}
